--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ABook - 高并发记账系统</title>
+    <title>Brollo - 智能记账系统</title>
   </head>
   <body>
     <div id="root"></div>
